--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "angular-star-rating": "^4.0.0-beta.3",
     "bootstrap": "^5.0.2",
     "html-to-pdfmake": "^2.3.1",
     "html2canvas": "^1.1.4",
     "jspdf": "^2.3.1",
+    "ng-starrating": "^1.0.20",
     "ngx-webcam": "^0.3.2",
     "pdfmake": "^0.2.0",
     "rxjs": "~6.6.0",
