--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,14 +16,18 @@
     "@angular/compiler": "~12.0.3",
     "@angular/core": "~12.0.3",
     "@angular/forms": "~12.0.3",
+    "@angular/localize": "~12.0.3",
     "@angular/material": "^12.1.2",
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "angular-star-rating": "^4.0.0-beta.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.0.2",
     "html-to-pdfmake": "^2.3.1",
     "html2canvas": "^1.1.4",
+    "jquery": "^3.6.0",
     "jspdf": "^2.3.1",
     "ng-starrating": "^1.0.20",
     "ngx-webcam": "^0.3.2",
