--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@angular/youtube-player": "^12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "angular-star-rating": "^4.0.0-beta.3",
     "aos": "^2.3.4",
